Letter spacing fix

--- a/sass/themes/sr/2018/components/typography/_typography.scss
+++ b/sass/themes/sr/2018/components/typography/_typography.scss
@@ -36,7 +36,8 @@ h1.alternate {
   text-transform: none;
   font-size: 30px;
   line-height: 32px;
-
+  letter-spacing: inherit;
+  
   @include breakpoint($screen-md) {
     font-size: 52px;
     line-height: 55px;
